# Travel-Assistant-Crew-

./: README.md
travelassistant/: .gitignore  README.md  pyproject.toml  report.md
travelassistant/src/travelassistant/: crew.py  main.py
travelassistant/src/travelassistant/config/: agents.yaml  tasks.yaml
