[project]
name = "travelassistant"
version = "0.1.0"
description = "TravelAssistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
]

[project.scripts]
travelassistant = "travelassistant.main:run"
run_crew = "travelassistant.main:run"
train = "travelassistant.main:train"
replay = "travelassistant.main:replay"
test = "travelassistant.main:test"
run_with_trigger = "travelassistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
